@@ -16,6 +16,7 @@
         <java.version>17</java.version>
         <doma.version>3.17</doma.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
     </properties>
     <dependencies>
         <dependency>
@@ -35,6 +36,41 @@
             <version>3.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seasar.doma.boot</groupId>
+            <artifactId>doma-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seasar.doma</groupId>
+            <artifactId>doma-processor</artifactId>
+            <version>3.0.0</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
     </dependencies>
 
 
@@ -46,8 +82,20 @@
                 <version>3.8.1</version>
                 <configuration>
                     <annotationProcessorPaths>
-
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                        <path>
+                                    <groupId>org.seasar.doma</groupId>
+                                    <artifactId>doma-processor</artifactId>
+                                    <version>3.0.0</version>
+                        </path>
                     </annotationProcessorPaths>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -57,7 +105,7 @@
         <repository>
             <name>mjl-snapshot</name>
             <id>movie-api</id>
-            <url>https://ghp.ci/https://raw.githubusercontent.com/ponyjoy/maven/master/</url>
+            <url>https://gh-proxy.com/https://raw.githubusercontent.com/ponyjoy/maven/master/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <checksumPolicy>warn</checksumPolicy>
@@ -67,5 +115,13 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
+        <repository>
+        <name>Sonatype Snapshots</name>
+        <id>sonatype-snapshots</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
     </repositories>
 </project>
